--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@ function showResult(){
 <button onclick="location.reload()"
   style="margin-top:20px;background:#4CAF50;color:white;">
 もう一度診断する
-</button>
+</buton>
 
   `;
 }
