--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@ button{
   </p>
   <p>💡 静かな環境で力を発揮する観察犬</p>
 
+<hr>
+
+<h3 style="text-align:center;">🐾 診断記号の意味 🐾</h3>
+
+<p style="font-size:14px;line-height:1.8;">
+・S 社交的（Sociable） / C 慎重（Careful）<br>
+・A 活発（Active） / O おっとり（Obedient / Relaxed）<br>
+・I 自立（Independent） / B 甘えん坊（Buddy-dependent）<br>
+・E 探求（Explorer） / H 安心重視（Home-oriented）
+</p>
+
   <button onclick="backToResult()">結果に戻る</button>
 </div>
 
